# docusaurus-arrange

./: .gitignore  CMakeLists.txt  Doxyfile  README.md
src/: main.cpp
src/gui/: enhancedTree.cpp  enhancedTree.hpp  license_dialog.cpp  license_dialog.hpp  license_dialog.ui  main_widget.cpp  main_widget.hpp  main_widget.ui
src/utils/: fileProcess.cpp  fileProcess.hpp  structManage.cpp  structManage.hpp  structMange.cpp  structMange.hpp
